@@ -123,7 +123,7 @@ static const uint8 fx[] = {
 	FX_TONE_VSLIDE,
 	FX_VIBRATO,
 	FX_VIBRA_VSLIDE,
-	FX_FINE4_VIBRA,
+	FX_FINE_VIBRATO,
 	FX_TREMOLO,
 	FX_ARPEGGIO,
 	FX_SETPAN,
